--- a/components/Acknowledgements.astro
+++ b/components/Acknowledgements.astro
@@ -77,7 +77,7 @@ const contributors: Contributor[] = await response.json();
     <h2>特别鸣谢</h2>
   </div>
 
-  <img src="./assets/images/Acknowledgements/Weblate_logo.svg.png" alt="Weblate Logo" class="acknowledgements-image" data-aos="fade-up" data-aos-delay="200">
+  <img src="../assets/images/Acknowledgements/Weblate_logo.svg.png" alt="Weblate Logo" class="acknowledgements-image" data-aos="fade-up" data-aos-delay="200">
 
   <p class="acknowledgements-text" data-aos="fade-up" data-aos-delay="400">鸣谢所有的贡献者</p>
 
