--- a/components/Acknowledgements.astro
+++ b/components/Acknowledgements.astro
@@ -7,6 +7,7 @@ interface Contributor {
 
 const response = await fetch('https://api.github.com/repos/Class-Widgets/Class-Widgets/contributors');
 const contributors: Contributor[] = await response.json();
+import WeblateImage from "@/assets/images/Acknowledgements/Weblate_logo.svg.png";
 ---
 
 <style>
@@ -77,7 +78,7 @@ const contributors: Contributor[] = await response.json();
     <h2>特别鸣谢</h2>
   </div>
 
-  <img src="../assets/images/Acknowledgements/Weblate_logo.svg.png" alt="Weblate Logo" class="acknowledgements-image" data-aos="fade-up" data-aos-delay="200">
+  <img src={WeblateImage.src} alt="Weblate Logo" class="acknowledgements-image" data-aos="fade-up" data-aos-delay="200">
 
   <p class="acknowledgements-text" data-aos="fade-up" data-aos-delay="400">鸣谢所有的贡献者</p>
 
