--- a/components/Acknowledgements.astro
+++ b/components/Acknowledgements.astro
@@ -7,7 +7,7 @@ interface Contributor {
 
 const response = await fetch('https://api.github.com/repos/Class-Widgets/Class-Widgets/contributors');
 const contributors: Contributor[] = await response.json();
-import WeblateImage from "@/assets/images/Acknowledgements/Weblate_logo.svg.png";
+import WeblateImage from "@/assets/images/Acknowledgements/Weblate_logo.svg";
 ---
 
 <style>
@@ -84,14 +84,16 @@ import WeblateImage from "@/assets/images/Acknowledgements/Weblate_logo.svg.png"
 
   <div class="contributors" data-aos="fade-up" data-aos-delay="600">
     {contributors.map((contributor: Contributor) => (
-      <img
-        src={contributor.avatar_url}
-        alt={contributor.login}
-        class="contributor-avatar"
-        data-key={contributor.id}
-        data-aos="fade-up"
-        data-aos-delay={600 + (contributor.id % 20) * 100}
-      />
+      <a href={`https://github.com/${contributor.login}`} target="_blank" rel="noopener noreferrer">
+        <img
+          src={contributor.avatar_url}
+          alt={contributor.login}
+          class="contributor-avatar"
+          data-key={contributor.id}
+          data-aos="fade-up"
+          data-aos-delay={600 + (contributor.id % 20) * 100}
+        />
+      </a>
     ))}
   </div>
 
