feat(i18n): 实现国际化支持并优化网站结构
- 添加多语言支持，包括中文和英文
- 更新导航栏、页脚等组件以支持国际化
- 重构部分组件以适应多语言环境
- 优化 URL 路由，增加语言前缀
- 添加版本信息卡片页面

--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -4,7 +4,10 @@ import Footer from "@/components/layout/Footer";
 import Header from "@/components/layout/Header";
 import { ClientRouter } from "astro:transitions";
 import AOSInit from '@/components/AOSInit.astro';
+import { getTranslator,getTranslations } from '@gudupao/astro-i18n';
 const { title } = Astro.props;
+const lang = Astro.params.lang || 'en';
+const t = getTranslator(lang);
 ---
 
 <!doctype html>
@@ -18,11 +21,11 @@ const { title } = Astro.props;
     <ClientRouter />
   </head>
   <body>
-    <Header client:load />
+    <Header client:load translations={getTranslations(lang)}/>
     <main>
       <slot />
     </main>
-    <Footer />
+    <Footer translations={getTranslations(lang)}/>
     <AOSInit />
   </body>
 </html>
