--- a/pages/index.astro
+++ b/pages/index.astro
@@ -6,22 +6,27 @@ import Desktop from "@/components/Desktop";
 import Personalization from "@/components/Personalization";
 import Compatibility from "@/components/Compatibility";
 import Test from "@/components/Test";
+import { getTranslator,getTranslations } from '@gudupao/astro-i18n';
+
+const lang = Astro.params.lang || 'en';
+const t = getTranslator(lang);
+
 ---
 
 <Layout transition:animate="slide">
-  <Hero client:load />
+  <Hero client:load translations={getTranslations(lang)}/>
   <div class="max-w-8xl mx-auto flex flex-col gap-16 py-16 overflow-hidden">
     <div
       class="ease-bounce flex flex-col gap-24 px-8 transition-all duration-500 md:px-12 lg:px-16 xl:px-24"
     >
-      <Desktop />
+      <Desktop client:load translations={getTranslations(lang)} />
       <div class="flex flex-col gap-24">
-        <Personalization />
-        <Compatibility client:load />
+        <Personalization client:load translations={getTranslations(lang)} />
+        <Compatibility client:load translations={getTranslations(lang)} />
       </div>
 
       <div>
-        <Test />
+        <Test client:load translations={getTranslations(lang)} />
       </div>
       <Acknowledgements />
     </div>
