--- a/pages/download.astro
+++ b/pages/download.astro
@@ -1,9 +1,13 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import DownloadPage from "@/components/Download.tsx";
+import { getTranslator, getTranslations } from "@gudupao/astro-i18n";
+
+const lang = Astro.params.lang || "en";
+const t = getTranslator(lang);
 ---
 
-<Layout transition:animate="slide" title="下载">
+<Layout transition:animate="slide" title={t("download.page_title")}>
   <br>
-  <DownloadPage client:load />
+  <DownloadPage client:load translations={getTranslations(lang)} />
 </Layout>
