refactor(project): 重构项目路径并优化 TypeScript 配置
- 更新 Layout 和 pages/index 文件中的组件导入路径，使用相对路径替代绝对路径

--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -1,9 +1,9 @@
 ---
 import "@/styles/global.css";
-import Footer from "@/components/layout/Footer";
-import Header from "@/components/layout/Header";
+import Footer from "../components/layout/Footer";
+import Header from "../components/layout/Header";
 import { ClientRouter } from "astro:transitions";
-import AOSInit from '@/components/AOSInit.astro';
+import AOSInit from '../components/AOSInit.astro';
 import { getTranslator,getTranslations } from '@gudupao/astro-i18n';
 const { title } = Astro.props;
 const lang = Astro.params.lang || 'en';
