--- a/pages/index.astro
+++ b/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-import Hero from "@/components/Hero";
-import Acknowledgements from "@/components/Acknowledgements.astro";
-import Layout from "@/layouts/Layout.astro";
-import Desktop from "@/components/Desktop";
-import Personalization from "@/components/Personalization";
-import Compatibility from "@/components/Compatibility";
-import Test from "@/components/Test";
+import Hero from "../components/Hero";
+import Acknowledgements from "../components/Acknowledgements.astro";
+import Layout from "../layouts/Layout.astro";
+import Desktop from "../components/Desktop";
+import Personalization from "../components/Personalization";
+import Compatibility from "../components/Compatibility";
+import Test from "../components/Test";
 import { getTranslator,getTranslations } from '@gudupao/astro-i18n';
 
 const lang = Astro.params.lang || 'en';
