--- a/components/Acknowledgements.astro
+++ b/components/Acknowledgements.astro
@@ -7,7 +7,7 @@ interface Contributor {
 
 import { getTranslator } from '@gudupao/astro-i18n';
 
-const response = await fetch('https://api.github.com/repos/Class-Widgets/Class-Widgets/contributors');
+const response = await fetch('https://api.github.com/repos/Class-Widgets/Class-Widgets/contributors?per_page=100');
 const contributors: Contributor[] = await response.json();
 const lang = Astro.params.lang || 'en';
 const t = getTranslator(lang);
@@ -105,11 +105,12 @@ import GudupaoImage from "@/assets/images/Acknowledgements/gudupao.webp";
 
   <div class="contributors" data-aos="fade-up" data-aos-delay="600">
     {Array.isArray(contributors) ? (
-      contributors.map((contributor: Contributor) => (
+      contributors.slice(0, 100).map((contributor: Contributor) => (
         <a href={`https://github.com/${contributor.login}`} target="_blank" rel="noopener noreferrer">
           <img
             src={contributor.avatar_url}
             alt={contributor.login}
+            loading="lazy"
             class="contributor-avatar"
             data-key={contributor.id}
             data-aos="fade-up"
